--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "php": ">=5.3.3",
         "ext-xml": "*",
         "zendframework/zend-escaper": "^2.2",
-        "zendframework/zend-stdlib": "^2.2",
+        "zendframework/zend-stdlib": "*",
         "phpoffice/common": "^0.2"
     },
     "require-dev": {
